# Learn_GoogleTest

./: CMakeLists.txt  CMakePresets.json  GTest.sln  README.md  build.sh
GTest/: GTest.vcxproj  main.cpp
GTest/x64/Debug/: GTest.exe.recipe  GTest.ilk  vc143.idb
GTest/x64/Debug/GTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Mymath/: Mymath.cpp  Mymath.hpp  Mymath.vcxproj  Mymath.vcxproj.filters
Mymath/x64/Debug/: Mymath.pch
Mymath/x64/Debug/Mymath.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
TestMath/: TestMath.vcxproj  test.cpp
TestMath/x64/Debug/: TestMath.exe.recipe  TestMath.vcxproj.FileListAbsolute.txt
TestMath/x64/Debug/TestMath.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: math.cpp  math.h  mockPhanSo.h  phanso.cpp  phanso.h
test/: unittest.cpp
